--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-jshint": "0.12.0",
     "grunt-jscs": "2.8.0",
-    "grunt-mocha": "^1.0.2",
+    "grunt-simple-mocha": "^0.4.1",
     "jshint": "2.8.0",
     "mocha": "^3.0.2"
   }
